--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,13 @@
 
     <properties>
         <compileSource>1.6</compileSource>
-        <powermock.version>1.4.5</powermock.version>
         <maven-surefire-plugin.version>2.8.1</maven-surefire-plugin.version>
         <maven-pmd-plugin.version>2.5</maven-pmd-plugin.version>
+        <!--Testing frameworks-->
         <easymock.version>3.0</easymock.version>
+        <powermock-api-mockito.version>1.4.5</powermock-api-mockito.version>
+        <mockito-all.version>1.8.5</mockito-all.version>
+        <powermock.version>1.4.9</powermock.version>
     </properties>
 
 
@@ -76,7 +79,6 @@
             <version>1.4</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>org.jvnet.mock-javamail</groupId>
             <artifactId>mock-javamail</artifactId>
@@ -92,19 +94,35 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.8.5</version>
+            <version>${mockito-all.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>org.powermock.modules</groupId>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>${easymock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
             <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-easymock</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.powermock.api</groupId>
             <artifactId>powermock-api-mockito</artifactId>
-            <version>${powermock.version}</version>
+            <version>${powermock-api-mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
