--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>email-ext</artifactId>
     <packaging>hpi</packaging>
-    <version>2.11</version>
+    <version>2.12-SNAPSHOT</version>
     <name>Hudson Email Extension Plugin</name>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Email-ext+plugin</url>
 
