--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <groupId>org.hudsonci.plugins</groupId>
     <artifactId>email-ext</artifactId>
     <packaging>hpi</packaging>
     <version>2.12-SNAPSHOT</version>
