--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,19 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.jvnet.hudson.plugins</groupId>
+        <groupId>org.eclipse.hudson.plugins</groupId>
         <artifactId>hudson-plugin-parent</artifactId>
-        <version>2.2.0</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>3.0.0</version>
+        <relativePath/>
     </parent>
 
     <groupId>org.hudsonci.plugins</groupId>
     <artifactId>email-ext</artifactId>
     <packaging>hpi</packaging>
-    <version>2.12-SNAPSHOT</version>
+    <version>2.12-h-1-SNAPSHOT</version>
     <name>Hudson Email Extension Plugin</name>
+  <description>Hudson Email Extension Plugin</description>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Email-ext+plugin</url>
 
     <properties>
@@ -22,9 +24,10 @@
         <!--Testing frameworks-->
         <easymock.version>3.0</easymock.version>
         <powermock-api-mockito.version>1.4.5</powermock-api-mockito.version>
-        <mockito-all.version>1.8.5</mockito-all.version>
-        <powermock.version>1.4.9</powermock.version>
-    </properties>
+        <mockito-all.version>1.9.5</mockito-all.version>
+        <powermock.version>1.4.10</powermock.version>
+    <hudsonTags>notifier</hudsonTags>
+  </properties>
 
 
     <developers>
@@ -51,21 +54,16 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jvnet.hudson.main</groupId>
+            <groupId>org.eclipse.hudson</groupId>
             <artifactId>hudson-test-framework</artifactId>
             <scope>test</scope>
             <version>${project.parent.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jvnet.hudson.plugins</groupId>
-                    <artifactId>subversion</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
-            <groupId>org.jvnet.hudson.main</groupId>
+            <groupId>org.hudsonci.plugins</groupId>
             <artifactId>maven-plugin</artifactId>
+      <version>3.0.1</version>
         </dependency>
 
         <dependency>
@@ -107,7 +105,7 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.version}</version>
+            <version>1.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -117,10 +115,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock.api</groupId>
+            <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
-            <version>${powermock-api-mockito.version}</version>
+            <version>1.5</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hudsonci.plugins</groupId>
+            <artifactId>token-macro</artifactId>
+            <version>1.8.1-h-1</version>
         </dependency>
     </dependencies>
 
@@ -171,6 +174,11 @@
                     <goals>deploy</goals>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.hudson.tools</groupId>
+                <artifactId>maven-hpi-plugin</artifactId>
+                <version>3.0.3</version>
+            </plugin>                     
         </plugins>
     </build>
 
@@ -212,9 +220,16 @@
     </repositories>
 
     <scm>
-        <connection>scm:git:git://github.com/hudson-plugins/email-ext-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:hudson-plugins/email-ext-plugin.git</developerConnection>
-        <url>https://github.com/hudson-plugins/email-ext-plugin.git</url>
+        <connection>scm:git:git://github.com/hudson3-plugins/email-ext-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:hudson3-plugins/email-ext-plugin.git</developerConnection>
+        <url>https://github.com/hudson3-plugins/email-ext-plugin</url>
     </scm>
 
+<licenses>
+    <license>
+      <name>The MIT license</name>
+      <url>http://opensource.org/licenses/MIT</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 </project>
